[project]
name = "somafm-linux"
version = "0.1.0"
description = "Linux system tray application for streaming SomaFM internet radio"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
]
# PyGObject is a system dependency: dnf install python3-gobject

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
